[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/Retro Gaming.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/Minecraft.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://PauseMenu/PauseScreen.gd" type="Script" id=3]
[ext_resource path="res://MainMenu/buttons/ExitButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://MainMenu/buttons/NewGameButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://MainMenu/buttons/Continue.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 72
use_mipmaps = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="PauseScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 520.0

[node name="PauseLabel" type="Label" parent="Menu"]
margin_right = 784.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 1432, 296 )
custom_colors/font_color_shadow = Color( 0.564706, 0.564706, 0.564706, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 1 )
text = "PAUSED"
align = 1
valign = 1

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 96.0
margin_right = 784.0
margin_bottom = 401.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 784.0
margin_bottom = 305.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 1

[node name="ContinueButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 62.0
margin_right = 784.0
margin_bottom = 122.0

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 122.0
margin_right = 784.0
margin_bottom = 182.0

[node name="ExitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 182.0
margin_right = 784.0
margin_bottom = 242.0

[node name="Label" type="Label" parent="Menu"]
margin_top = 405.0
margin_right = 784.0
margin_bottom = 440.0
custom_fonts/font = SubResource( 2 )
text = "Version 1.0
Dylan Nguyen"

[connection signal="mouse_entered" from="Menu/CenterRow/Buttons/ContinueButton" to="." method="_on_ContinueButton_mouse_entered"]
[connection signal="mouse_exited" from="Menu/CenterRow/Buttons/ContinueButton" to="." method="_on_ContinueButton_mouse_exited"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="mouse_entered" from="Menu/CenterRow/Buttons/NewGameButton" to="." method="_on_NewGameButton_mouse_entered"]
[connection signal="mouse_exited" from="Menu/CenterRow/Buttons/NewGameButton" to="." method="_on_NewGameButton_mouse_exited"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="mouse_entered" from="Menu/CenterRow/Buttons/ExitButton" to="." method="_on_ExitButton_mouse_entered"]
[connection signal="mouse_exited" from="Menu/CenterRow/Buttons/ExitButton" to="." method="_on_ExitButton_mouse_exited"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
